# vault

./: .gitignore  Cargo.toml  build.rs
experiment-test/: .experimentmeta
migrations/2020-11-24-002226_initial/: down.sql  up.sql
src/: main.rs
src/any_derive/: Cargo.toml
src/any_derive/src/: lib.rs
src/cli/: mod.rs
src/vault/: db.rs  dsl.l  dsl.rs  dsl.y  mod.rs
test/testdata/vault/commands/: add-meta  get-latest  query  register
test/testdata/vault/dsl/translate/: basic
tests/: cli.rs
tests/testdata/cli/integration/: basic
tests/testdata/vault/commands/: get-latest  query  register
