[package]
name = "vault"
version = "0.1.0"
authors = ["Rohan Yadav <rohany@cs.stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# For simplicity, let's just start with serde_json and can switch
# over to bincode once this project gets a little more off the ground.
serde_json = "1.0"
structopt = "0.3.13"
tempdir = "0.3.7"